--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <h2>Project Manager</h2>
         <p>I've worked as a project manager at one of the construction that was assigned to me to oversee during my second year of study at Kibabii University.
         I also hold a bachelors degree in accounting and commerce. with these skills I can work in any of the accounting fields without supervision.  </p>
-        <a href="lenox cv.pdf" class="cta">Download Resume</a>
+        <a href="lenox cv.pdf" class="cta" download>Download Resume</a>
       </div>
     </div>
   </section>
