--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
           <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/behance.png" /></a>
         </div>
         <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/tiktok.png" /></a>
+          <a href="https://www.tiktok.com/@lennoxluokid?is_from_webapp=1&sender_device=pc"><img src="https://img.icons8.com/bubbles/100/000000/tiktok.png" /></a>
         </div>
       </div>
       <p>Copyright © 2024 <a href="#">Rex Labs</a> All rights reserved</p>
