--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" /></a>
         </div>
         <div class="social-item">
-          <a href="#"><img src="https://icons8.com/icon/ClbD5JTFM7FA/twitterx.png"/></a>
+          <a href="https://x.com/LenoxOtieno2"><i class='bx bxl-twitter'></i></a>
         </div>
         <div class="social-item">
           <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/behance.png" /></a>
