--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+   <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
   <title>Lennox</title>
 </head>
 
@@ -190,7 +191,7 @@
           <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" /></a>
         </div>
         <div class="social-item">
-          <a href="https://x.com/LenoxOtieno2"><i class='bx bxl-twitter'></i></a>
+          <a href="https://x.com/LenoxOtieno2"><box-icon type='logo' name='twitter'></box-icon></a>
         </div>
         <div class="social-item">
           <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/behance.png" /></a>
