--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" /></a>
         </div>
         <div class="social-item">
-          <a href="https://x.com/LenoxOtieno2"><img src="hhttps://img.icons8.com/?size=100&id=6Fsj3rv2DCmG&format=png&color=000000" /></a>
+          <a href="https://x.com/LenoxOtieno2"><img src="https://img.icons8.com/?size=100&id=phOKFKYpe00C&format=png&color=000000" /></a>
         </div>
         <div class="social-item">
           <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/behance.png" /></a>
