--- a/index.html
+++ b/index.html
@@ -185,19 +185,19 @@
       <h2>Your trusted business partner</h2>
       <div class="social-icon">
         <div class="social-item">
-          <a href="https://web.facebook.com/profile.php?id=100073378517616"><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png" /></a>
+          <a href="https://web.facebook.com/profile.php?id=100073378517616"><img src="https://img.icons8.com/?size=100&id=yGcWL8copNNQ&format=png&color=000000" /></a>
         </div>
-        <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" /></a>
-        </div>
+        <!--<div class="social-item" instagram>
+          <a href="#"><img src="https://img.icons8.com/?size=100&id=Xy10Jcu1L2Su&format=png&color=000000" /></a>
+        </div> -->
         <div class="social-item">
           <a href="https://x.com/LenoxOtieno2"><img src="https://img.icons8.com/?size=100&id=phOKFKYpe00C&format=png&color=000000" /></a>
         </div>
-        <div class="social-item">
+        <!--<div class="social-item">
           <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/behance.png" /></a>
-        </div>
+        </div>-->
         <div class="social-item">
-          <a href="https://www.tiktok.com/@lennoxluokid?is_from_webapp=1&sender_device=pc"><img src="https://img.icons8.com/bubbles/100/000000/tiktok.png" /></a>
+          <a href="https://www.tiktok.com/@lennoxluokid?is_from_webapp=1&sender_device=pc"><img src="https://img.icons8.com/?size=100&id=phOKFKYpe00C&format=png&color=000000" /></a>
         </div>
       </div>
       <p>Copyright © 2024 <a href="#">Rex Labs</a> All rights reserved</p>
