--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
           <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/behance.png" /></a>
         </div>-->
         <div class="social-item">
-          <a href="https://www.tiktok.com/@lennoxluokid?is_from_webapp=1&sender_device=pc"><img src="https://img.icons8.com/?size=100&id=phOKFKYpe00C&format=png&color=000000" /></a>
+          <a href="https://www.tiktok.com/@lennoxluokid?is_from_webapp=1&sender_device=pc"><img src="https://img.icons8.com/?size=100&id=118640&format=png&color=000000" /></a>
         </div>
       </div>
       <p>Copyright © 2024 <a href="#">Rex Labs</a> All rights reserved</p>
