--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
           <h2>Consultancy</h2>
-          <p>Need to start a business? Let us help you. </p>
+          <p>Need to start a business? Let me help you. </p>
         </div>
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
           <h2>Business Plan</h2>
-          <p>We help you develiop an attractive and reasonable business plan. <a href="#">Book Your Slot Now</a></p>
+          <p>I help you develop an attractive and reasonable business plan. <a href="#">Book Your Quote with me Today</a></p>
         </div>
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
@@ -89,7 +89,7 @@
           <div class="project-info">
             <h1>Accounting</h1>
             <h2>Skills</h2>
-            <p>Here is a sample of the accounting jobs that I've done through this course.</p>
+            <p>Here is a sample of the accounting jobs that I've done.</p>
           </div>
           <div class="project-img">
             <img src="./img/img-1.png" alt="img">
